Added Mushroom Level Calculator
Finds when you'll get mushroom levels in a mine

--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MushroomLevelCalculator.cs" />
     <Compile Include="OptionSelector.cs" />
     <Compile Include="PrismaticShardCalculator.cs" />
     <Compile Include="Program.cs" />
